--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint --ext '.ts,.tsx' --ignore-path .gitignore src/",
     "preview": "vite preview",
     "tauri": "tauri"
   },
@@ -14,10 +15,16 @@
     "preact": "^10.11.3"
   },
   "devDependencies": {
-    "@types/node": "^18.7.14",
     "@babel/core": "^7.12.10",
     "@preact/preset-vite": "^2.4.0",
     "@tauri-apps/cli": "^1.2.2",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
